update rythym styling: using padding over margin to avoid overlap of adjacent block elements

--- a/css/new.css
+++ b/css/new.css
@@ -51,8 +51,6 @@ abbr[title], dfn[title] { border-bottom:1px dotted #000; cursor:help; }
 /* tables still need cellspacing="0" in the markup */
 table { border-collapse:collapse; border-spacing:0; }
 
-hr { display:block; height:1px; border:0; border-top:1px solid #ccc; margin:1em 0; padding:0; }
-
 input, select { vertical-align:middle; }
 
 
@@ -60,11 +58,14 @@ input, select { vertical-align:middle; }
 /* ---- 24px vertical rhythm
  * <http://webtypography.net/Rhythm_and_Proportion/Vertical_Motion/2.2.2/>
  */
+/*#main, */
+.ruled {
+  background: url("/img/24px1.png") repeat scroll 0 0 transparent;
+}
 body {
   line-height: 24px;
   font-family: arial,sans-serif;
   font-size: 15px;
-  /*background: url("/img/24px1.png") repeat scroll 0 0 transparent;*/
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'IM Fell English',arial,sans-serif;
@@ -75,42 +76,49 @@ h1,h2,h3,h4,h5,h6 {
 h1 {
   font-size: 36px;
   line-height: 48px;
-  margin: 48px 0 24px 0;
+  padding: 48px 0 24px 0;
 }
 h2 {
   font-size: 28px;
   line-height: 48px;
-  margin: 24px 0 0 0;
+  padding: 24px 0 0 0;
 }
 h3 {
   font-size: 21px;
   line-height: 24px;
-  margin: 24px 0 24px 0;
+  padding: 24px 0 24px 0;
 }
 h4 {
   font-size: 16px;
   line-height: 24px;
-  margin: 24px 0 0 0;
+  padding: 24px 0 0 0;
 }
 h5 {
   font-size: 14px;
   line-height: 24px;
-  margin: 24px 0 0 0;
+  padding: 24px 0 0 0;
 }
 h6 {
   color: #666;
   font-size: 14px;
   line-height: 24px;
-  margin: 24px 0 0 0;
+  padding: 24px 0 0 0;
 }
 hr {
-  /* TODO: can have a centered bgimage decoration for nice hr? */
-  margin: -1px 0 0 0;
-  margin: 22px 0 24px 0;
+  padding-bottom: 24px;
+  margin: 24px 0;
+  height: 0;
+  border: none;
+  text-align: center;
+  color: #333;
+}
+hr:after {
+  content: "\2767";
 }
 p + p {
   text-indent: 24px;
-  /*margin-top: 24px; /* or this */
+  padding: 0;
+  /*padding-top: 24px; /* or this */
 }
 
 
@@ -153,7 +161,8 @@ pre {
 
 /* TODO: interesting bullets: one of the decorations I found */
 ol, ul {
-  margin: 12px 24px;
+  padding: 12px 0;
+  margin: 0 24px;
 }
 ol ol, ul ul, ul ol, ol ul {
   margin-left: 24px;
@@ -177,6 +186,6 @@ ol ol ol ol { list-style-type: lower-roman; }
 
 @media only screen and (min-width: 700px) {
   ol, ul {
-    margin: 12px 0;
+    margin: 0;
   }
 }
